# opencodos

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/agents/: refactor.md
.github/: dependabot.yml
.github/workflows/: code_review.yml  lint.yml  update-version.yml
agents/cgo/: prompt.md
agents/chief-content/: prompt.md
agents/claude/: prompt.md
agents/hillary/: prompt.md
agents/karpathy/: prompt.md
agents/mckinsey/: prompt.md
backend/: __main__.py  pyproject.toml
backend/atlas_bot/: bot.py  config.py  main.py
backend/codos_adapters/: __init__.py
backend/codos_adapters/claude/: mcp.py
backend/codos_adapters/telethon/: __init__.py  client.py  session.py
backend/codos_models/: __init__.py  connector.py  connector_commands.py  exceptions.py  secrets.py  settings.py  setup.py  telegram.py
backend/codos_services/: __init__.py
backend/codos_services/codos_bot/: .env.example  README.md  bot.py  config.py  formatter.py  main.py  session_manager.py
backend/codos_services/gateway/: AGENTS-README.md  auth.py  server.py  start.sh
backend/codos_services/gateway/hooks/: package.json  text-relay.ts
backend/codos_services/gateway/routes/: __init__.py  agents.py  agents_config.py  agents_rest.py  agents_ws.py  context.py  crm.py  health.py  inbox.py  schedules.py  setup.py  skills.py  workflows.py
backend/codos_services/gateway/services/: __init__.py  agent_loader.py  attachments.py  auto_title.py  claude_service.py  event_translator.py  session_manager.py  session_storage.py  stream_manager.py  token_tracker.py
backend/codos_services/telegram_agent/: .gitignore  README.md  agent.py  check_archived.py  complete_login.py  config.example.yaml  crm_update.py  cron_sync.sh  daily_summary.py  fast_login.py  gather-telegram-summary-context.py  launchd_sync.sh  list_chats.py  login_phone.py  login_qr.py  login_simple.py  main.py  priority_contacts.example.yaml  request_code.py  run-telegram-summary-cc.sh  server.py
backend/codos_services/telegram_agent/src/: claude.py  config.py  obsidian.py  selector.py  sync.py  telegram_client.py
backend/codos_services/telegram_mcp/: .env.example  .gitignore  README.md  main.py  session_string_generator.py
backend/codos_usecases/: __init__.py  connector_status.py  connector_sync.py  dependency_check.py  dependency_install.py  path_detection.py  setup_completion.py  slack_config.py  vault_init.py
backend/codos_utils/: deps.py  entity.py  log.py  paths.py  system.py  telegram.py
backend/codos_utils/secrets/: __init__.py  json_file.py  protocol.py  registry.py  settings_source.py
backend/connector/: connector_commands.py  pipedream_client.py  server.py  settings.py  slack_config.py  status_checker.py
backend/connector/hooks/: permission-handler.ts  stream-event.ts
backend/connector/routes/: agents_rest.py  context.py  crm.py  health.py  inbox.py  schedules.py  setup.py  workflows.py
backend/connector/services/: agent_loader.py  attachments.py  event_translator.py  session_manager.py  session_storage.py  stream_manager.py
backend/telegram_agent/: agent.py  crm_update.py  cron_sync.sh  gather-telegram-summary-context.py  launchd_sync.sh  list_chats.py  login_qr.py  main.py  migrate_folders.py  request_code.py  run-telegram-summary-cc.sh  server.py
backend/telegram_agent/src/: __init__.py  config.py  notify.py  selector.py  sync.py  telegram_client.py
backend/telegram_agent/tests/: test_auth_config.py
backend/telegram_mcp/: main.py  session_string_generator.py  test_validation.py
dev/Ops/: .gitignore  README.md  env.sh  msg-draft-skills-plan.md  telegram-mcp-plan.md
dev/desktop/: README.md  RELEASE_HARDENING.md  package-lock.json  package.json  services.json
dev/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
dev/desktop/src-tauri/capabilities/: default.json
dev/desktop/src-tauri/dmg-support/: template.applescript
dev/desktop/src-tauri/icons/: icon.icns
dev/desktop/src-tauri/src/: main.rs
dev/frontend/: index.html  package-lock.json  package.json  vite.config.ts
ee/: LICENSE  README.md
ingestion/: README-reliability-monitor.md  README.md  package.json  reliability-check.py  tsconfig.json
ingestion/Github/: CLOUDBOT_SETUP.md  cloudbot-config.example.json  cloudbot-monitor.ts  github-sync.py
ingestion/Gmail/: gmail-sync.ts
ingestion/Granola/: bootstrap-profiles.ts  extract-granola.ts  granola-hook.ts  granola-worker.ts  load-context.ts  logging.ts  notify.ts  package-lock.json  package.json  process-summary-actions.ts  run-granola-sync.sh  run-summarize-cc.sh  summarize-calls.ts
ingestion/Linear/: linear-sync.ts
ingestion/Notion/: package.json
ingestion/Slack/: config.example.yaml  slack-sync.ts
ingestion/Telegram/: package-lock.json  package.json  process-telegram-actions.test.ts  process-telegram-actions.ts
ingestion/Telegram-agent/: config.yaml
ingestion/lib/: date.test.ts  date.ts  fs.test.ts  fs.ts  parse.test.ts  parse.ts  paths.test.ts  (+5 more)
scripts/: bootstrap.sh  build-python-services.sh  check-coverage.sh  codos  install.sh  send-telegram.py  sync-version.sh
skills/: orchestrator.md
skills/Research/: SKILL.md  gemini-web-research.py  pyproject.toml  run-deep-research.py
src/backend/atlas_bot/: .env.example  README.md  bot.py  config.py  formatter.py  pyproject.toml  requirements.txt  session_manager.py
src/backend/telegram_agent/: README.md  agent.py  check_archived.py  complete_login.py  crm_dashboard.py  crm_update.py  cron_sync.sh  daily_summary.py  fast_login.py  gather-telegram-summary-context.py  launchd_sync.sh  login_phone.py  login_simple.py  main.py  pyproject.toml  run-telegram-summary-cc.sh  server.py
src/backend/telegram_agent/src/: claude.py  config.py  obsidian.py  sync.py  telegram_client.py
src/backend/telegram_agent/tests/: test_auth_config.py  test_session_lock.py
src/backend/telegram_mcp/: .env.example  Dockerfile  main.py  pyproject.toml  session_string_generator.py  test_validation.py
(+302 files in other folders)
