[project]
name = "research"
version = "0.1.0"
description = "Gemini Deep Research dependencies"
requires-python = ">=3.11"
dependencies = [
    # Browser automation (primary method)
    "playwright>=1.40.0",
    "html2text>=2024.2.26",
    # API fallback (optional)
    "google-generativeai>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
