[package]
name = "codos-desktop"
version = "1.2.6"
description = "Codos desktop shell"
authors = ["Codos"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tauri = { version = "2.10", features = ["tray-icon", "devtools"] }
tauri-plugin-autostart = "2"
libc = "0.2.181"
