[project]
name = "telegram-agent"
version = "0.1.0"
description = "Telegram sync agent for Atlas"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anthropic>=0.77.0",
    "anyio>=4.12.1",
    "assemblyai>=0.49.0",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "distro>=1.9.0",
    "docstring-parser>=0.17.0",
    "fastapi>=0.128.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "jiter>=0.12.0",
    "linkify-it-py>=2.0.3",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "mdurl>=0.1.2",
    "pillow>=12.1.0",
    "platformdirs>=4.5.1",
    "pyaes>=1.6.1",
    "pyasn1>=0.6.2",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pygments>=2.19.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "rsa>=4.9.1",
    "sniffio>=1.3.1",
    "starlette>=0.50.0",
    "telethon>=1.42.0",
    "textual>=7.4.0",
    "typing-inspection>=0.4.2",
    "typing-extensions>=4.15.0",
    "uc-micro-py>=1.0.3",
    "urllib3>=2.6.3",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "loguru>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
