[project]
name = "telegram-mcp"
version = "2.0.1"
description = "Telegram integration for Claude via the Model Context Protocol"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
    "loguru>=0.7.0",
    "telethon>=1.39.0",
]

[project.scripts]
telegram-mcp = "main:main"
telegram-mcp-generate-session = "session_string_generator:main"

[tool.black]
line-length = 99
target-version = ['py311']

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
